--- a/20170728_Legg_1.rmd
+++ b/20170728_Legg_1.rmd
@@ -293,7 +293,7 @@ Compared to the unemployment series, the auto sale series exhibit less downhill-
 plot(decompose(auto.ts, type = "additive"))
 ```
 
-The trend component observed in the decomposed series concur with our intuitions from the smoothed series. With the seasonal component taken out, the random component show a spike in mid-1980s and several more in 2000s, both of which may correspond to respective oil price fluctuations. In general, the random component series shows higher variance before mid-1980s than after, which we have also observed in the unemployment series. The decomposed components are clearly not stationary, which against suggest that OLS is not appropriate. 
+The trend component observed in the decomposed series concur with our intuitions from the smoothed series. With the seasonal component taken out, the random component show a spike in mid-1980s and several more in 2000s, both of which may correspond to respective oil price fluctuations. In general, the random component series shows higher variance before mid-1980s than after, which we have also observed in the unemployment series. The decomposed components are clearly not stationary, which again suggest that OLS is not appropriate. 
 
 
 ## Establish Stationarity
